--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
         
         <div class="footer">
-            TO BUY PANEL DM HERE :- <a href="#">@RTE_OWNER</a>
+            TO BUY PANEL DM HERE :- <a href="#">@SK9_Owner</a>
         </div>
     </div>
 </body>
